--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <style>
     :root {
       --ballColor: red;
+      --bgColor: #111;
     }
     body {
-      font-family: Arial, sans-serif;
-      background: #111;
+      background: var(--bgColor);
       color: white;
+      font-family: Arial, sans-serif;
       padding-top: 60px;
       text-align: center;
       margin: 0;
@@ -31,7 +32,7 @@
     #grid {
       display: grid;
       grid-template-columns: repeat(3, 100px);
-      grid-gap: 10px;
+      gap: 10px;
       justify-content: center;
       margin: 20px auto;
     }
@@ -41,8 +42,8 @@
       height: 100px;
       border-radius: 8px;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
     }
     .dot {
@@ -51,162 +52,236 @@
       border-radius: 50%;
       background: var(--ballColor);
     }
-    .missed {
-      background: darkred !important;
+    .missed { background: darkred !important; }
+    #storeBtn {
+      margin: 10px auto;
+      padding: 8px 14px;
+      background: green;
+      border: none;
+      color: white;
+      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    #achievements {
-      margin-top: 20px;
+    #storePanel {
+      background: #222;
+      padding: 15px;
+      margin: 20px auto;
+      border-radius: 10px;
+      max-width: 360px;
+      display: none;
+    }
+    .storeItem {
+      margin: 10px 0;
+      padding: 8px;
+      background: #333;
+      border-radius: 8px;
+    }
+    .locked { opacity: 0.6; }
+    iframe#ad {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 60px;
+      border: none;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
   <button id="downloadBtn" onclick="downloadGame()">📱 Download</button>
-
   <h2>🎯 Chasing Dot</h2>
   <div>
     Score: <span id="score">0</span> |
     Lives: <span id="lives">3</span> |
-    High Score: <span id="highScore">0</span>
+    High Score: <span id="highScore">0</span> |
+    🪙 Coins: <span id="coins">0</span>
   </div>
-
-  <label>
-    🎨 Ball Color:
-    <select id="colorSelect">
-      <option value="red">Red</option>
-      <option value="green">Green</option>
-      <option value="blue">Blue</option>
-      <option value="yellow">Yellow</option>
-      <option value="orange">Orange</option>
-    </select>
-  </label>
 
   <div id="grid"></div>
 
-  <div id="achievements">
-    <h3>🏆 Achievements</h3>
-    <ul>
-      <li id="a10">🎯 Score 10</li>
-      <li id="a20">🔥 Score 20</li>
-      <li id="a30">💥 Score 30</li>
-      <li id="a50">🚀 Score 50</li>
-      <li id="a75">⚡ Score 75</li>
-      <li id="a100">👑 Score 100</li>
-    </ul>
+  <button id="storeBtn" onclick="toggleStore()">🛒 Open Store</button>
+
+  <div id="storePanel">
+    <h3>🎨 Skins</h3>
+    <div class="storeItem" data-skin="red">🔴 Red - Free</div>
+    <div class="storeItem locked" data-skin="dog" data-cost="10">🐶 Dog - 10 coins</div>
+    <div class="storeItem locked" data-skin="rainbow" data-cost="15">🌈 Rainbow - 15 coins</div>
+    <h3>🎨 Themes</h3>
+    <div class="storeItem locked" data-theme="forest" data-cost="10">🌲 Forest - 10 coins</div>
+    <div class="storeItem locked" data-theme="neon" data-cost="15">💡 Neon - 15 coins</div>
+    <div class="storeItem locked" data-theme="desert" data-cost="20">🏜 Desert - 20 coins</div>
+  </div>
+
+  <div id="reviveBox" style="display:none; margin:20px;">
+    <p>💀 Out of lives! Watch ad to revive?</p>
+    <button onclick="watchAdToRevive()">▶️ Watch Ad</button>
   </div>
 
   <audio id="bgMusic" src="sounds/bg.mp3" loop preload="auto"></audio>
+  <audio id="cheer" src="sounds/cheer.mp3"></audio>
+  <audio id="boo" src="sounds/boo.mp3"></audio>
+
+  <iframe id="ad" src="https://www.profitableratecpm.com/drmjgriq2?key=f3d635f9a014d5973a07432322c6ea01"></iframe>
 
   <script>
     const grid = document.getElementById("grid");
     const scoreEl = document.getElementById("score");
     const livesEl = document.getElementById("lives");
     const highScoreEl = document.getElementById("highScore");
-    const colorSelect = document.getElementById("colorSelect");
+    const coinsEl = document.getElementById("coins");
     const bgMusic = document.getElementById("bgMusic");
+    const cheer = document.getElementById("cheer");
+    const boo = document.getElementById("boo");
 
-    let score = 0, lives = 3, highScore = 0;
-    let isStarted = false, dotIndex = 4, clicked = false;
-    let interval = null, moveSpeed = 1000, musicStarted = false;
+    let score = 0, lives = 3, highScore = 0, dotIndex = 4;
+    let started = false, musicStarted = false, moveSpeed = 1000, interval;
+    let coins = 0, unlocked = JSON.parse(localStorage.getItem("unlocked")) || { skins: ["red"], themes: [] };
+    let selectedSkin = localStorage.getItem("skin") || "red";
+    let selectedTheme = localStorage.getItem("theme") || "";
 
-    const cells = [];
+    if (selectedTheme === "forest") document.documentElement.style.setProperty("--bgColor", "#1e3d2f");
+    if (selectedTheme === "neon") document.documentElement.style.setProperty("--bgColor", "#001133");
+    if (selectedTheme === "desert") document.documentElement.style.setProperty("--bgColor", "#806c3b");
 
-    for (let i = 0; i < 9; i++) {
-      const cell = document.createElement("div");
-      cell.className = "cell";
-      cell.addEventListener("click", () => handleClick(i));
-      grid.appendChild(cell);
-      cells.push(cell);
-    }
+    let cells = [];
 
-    function updateStats() {
-      scoreEl.textContent = score;
-      livesEl.textContent = lives;
-      highScoreEl.textContent = highScore;
+    function saveProgress() {
+      localStorage.setItem("highScore", highScore);
+      localStorage.setItem("coins", coins);
+      localStorage.setItem("skin", selectedSkin);
+      localStorage.setItem("theme", selectedTheme);
+      localStorage.setItem("unlocked", JSON.stringify(unlocked));
     }
 
     function placeDot(index) {
       cells.forEach(c => c.innerHTML = "");
       const dot = document.createElement("div");
       dot.className = "dot";
-      dot.style.background = colorSelect.value;
-      cells[index].appendChild(dot);
-    }
-
-    function startMusicOnce() {
-      if (!musicStarted) {
-        bgMusic.volume = 0.5;
-        bgMusic.play().catch(err => console.log("Autoplay blocked:", err));
-        musicStarted = true;
-      }
+      dot.style.background = selectedSkin === "rainbow" ? "linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet)" : selectedSkin === "dog" ? "#c89f77" : selectedSkin;
+      grid.children[index].appendChild(dot);
     }
 
     function handleClick(i) {
+      if (!musicStarted) {
+        bgMusic.volume = 0.5;
+        bgMusic.play().catch(() => {});
+        musicStarted = true;
+      }
       if (lives <= 0) return;
 
-      startMusicOnce();
-
-      if (!isStarted) {
+      if (!started) {
         if (i === dotIndex) {
-          isStarted = true;
+          started = true;
           score = 1;
+          coins++;
           updateStats();
-          unlockAchievements(score);
-          moveDot();
-        } else {
-          return;
+          placeDot(Math.floor(Math.random() * 9));
+          interval = setInterval(() => placeDot(Math.floor(Math.random() * 9)), moveSpeed);
         }
-      } else if (i === dotIndex) {
-        score++;
-        if (score > highScore) highScore = score;
-        if (score % 10 === 0 && moveSpeed > 200) moveSpeed -= 100;
-        unlockAchievements(score);
-        moveDot();
-      } else {
-        lives--;
-        livesEl.textContent = lives;
-        cells[i].classList.add("missed");
-        setTimeout(() => cells[i].classList.remove("missed"), 300);
-        if (lives <= 0) {
-          clearInterval(interval);
-          alert("💀 Game Over");
-        }
+        return;
       }
 
-      updateStats();
+      if (i === dotIndex) {
+        score++;
+        if (score % 10 === 0) {
+          coins++;
+          cheer.play();
+          if (moveSpeed > 200) moveSpeed -= 100;
+          clearInterval(interval);
+          interval = setInterval(() => placeDot(Math.floor(Math.random() * 9)), moveSpeed);
+        }
+        if (score > highScore) highScore = score;
+        updateStats();
+        placeDot(Math.floor(Math.random() * 9));
+      } else {
+        lives--;
+        boo.play();
+        grid.children[i].classList.add("missed");
+        setTimeout(() => grid.children[i].classList.remove("missed"), 300);
+        updateStats();
+        if (lives <= 0) {
+          clearInterval(interval);
+          document.getElementById("reviveBox").style.display = "block";
+        }
+      }
+      saveProgress();
     }
 
-    function moveDot() {
-      dotIndex = Math.floor(Math.random() * 9);
-      placeDot(dotIndex);
-      clearInterval(interval);
-      interval = setInterval(moveDot, moveSpeed);
+    function updateStats() {
+      scoreEl.textContent = score;
+      livesEl.textContent = lives;
+      highScoreEl.textContent = highScore = Math.max(highScore, score);
+      coinsEl.textContent = coins;
     }
 
-    function unlockAchievements(score) {
-      if (score >= 10) document.getElementById("a10").style.color = "lime";
-      if (score >= 20) document.getElementById("a20").style.color = "lime";
-      if (score >= 30) document.getElementById("a30").style.color = "lime";
-      if (score >= 50) document.getElementById("a50").style.color = "lime";
-      if (score >= 75) document.getElementById("a75").style.color = "lime";
-      if (score >= 100) document.getElementById("a100").style.color = "lime";
+    function toggleStore() {
+      document.getElementById("storePanel").style.display ^= "block";
+    }
+
+    function watchAdToRevive() {
+      const win = window.open("https://www.profitableratecpm.com/drmjgriq2?key=f3d635f9a014d5973a07432322c6ea01", "_blank");
+      setTimeout(() => {
+        if (win) win.close();
+        lives = 1;
+        updateStats();
+        document.getElementById("reviveBox").style.display = "none";
+        interval = setInterval(() => placeDot(Math.floor(Math.random() * 9)), moveSpeed);
+      }, 10000);
     }
 
     function downloadGame() {
-      window.open("chasing-dot.zip", "_blank");
+      window.location.href = "chasing-dot.zip";
     }
 
-    document.getElementById("colorSelect").addEventListener("change", e => {
-      document.documentElement.style.setProperty("--ballColor", e.target.value);
+    document.querySelectorAll(".storeItem").forEach(item => {
+      item.onclick = () => {
+        const skin = item.dataset.skin;
+        const theme = item.dataset.theme;
+        const cost = parseInt(item.dataset.cost || "0");
+
+        if (skin) {
+          if (!unlocked.skins.includes(skin)) {
+            if (coins >= cost) {
+              coins -= cost;
+              unlocked.skins.push(skin);
+            } else return alert("Not enough coins!");
+          }
+          selectedSkin = skin;
+        }
+
+        if (theme) {
+          if (!unlocked.themes.includes(theme)) {
+            if (coins >= cost) {
+              coins -= cost;
+              unlocked.themes.push(theme);
+            } else return alert("Not enough coins!");
+          }
+          selectedTheme = theme;
+          document.documentElement.style.setProperty("--bgColor",
+            theme === "forest" ? "#1e3d2f" : theme === "neon" ? "#001133" : theme === "desert" ? "#806c3b" : "#111");
+        }
+        updateStats();
+        saveProgress();
+      };
     });
 
-    // Initial dot in center
-    placeDot(4);
-    updateStats();
-
-    // Register PWA service worker
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
+    function init() {
+      highScore = parseInt(localStorage.getItem("highScore") || "0");
+      coins = parseInt(localStorage.getItem("coins") || "0");
+      updateStats();
+      for (let i = 0; i < 9; i++) {
+        const cell = document.createElement("div");
+        cell.className = "cell";
+        cell.addEventListener("click", () => handleClick(i));
+        grid.appendChild(cell);
+        cells.push(cell);
+      }
+      placeDot(dotIndex);
     }
+
+    if ('serviceWorker' in navigator) navigator.serviceWorker.register('service-worker.js');
+    init();
   </script>
 </body>
 </html>
